--- a/app/views/conferences/proposals.html.erb
+++ b/app/views/conferences/proposals.html.erb
@@ -3,20 +3,20 @@
 
 <%= pagination_header @props %>
 <%= will_paginate @props %>
-<%= start_table %>
-  <%= table_head_row %>
+<% table do %>
+  <% table_head_row do %>
     <th><%= _'Title' %></th>
     <th><%= _'Authors' %></th>
     <th><%= _'Proposal type' %></th>
     <th><%= _'Proposal status' %></th>
-  <%= end_table_row %>
+  <% end %>
   <% @props.each do |prop| %>
-    <%= table_row %>
+    <% table_row do %>
       <td><%= link_to(prop.title, :controller => 'proposals',
 	              :action => 'show', :id => prop)%></td>
       <td><%= authors_list_for_proposal(prop).join('<br/>') %></td>
       <td><%=h prop.prop_type.name %></td>
       <td><%=h prop.prop_status.name %></td>
-    <%= end_table_row %>
+    <% end %>
   <% end %>
-<%= end_table %>
+<% end %>
