--- a/app/views/attendance_adm/att_by_tslot.html.erb
+++ b/app/views/attendance_adm/att_by_tslot.html.erb
@@ -7,18 +7,18 @@
         (@tslot.proposal.nil? ? _('No proposal defined') : 
          link_to_proposal(@tslot.proposal))] %></p>
 
-<%= start_table %>
-  <%= table_head_row %>
+<% table do %>
+  <% table_head_row do %>
     <th><%= _'Attendee' %></th>
     <th><%= _'Registration time' %></th>
-  <%= end_table_row %>
+  <% end %>
   <% @attendances.each do |att| %>
-    <%= table_row %>
+    <% table_row do %>
       <td><%= link_to att.person.name,
                       :action => 'for_person', 
                       :person_id => att.person, 
                       :conference_id => @conference %></td>
       <td><%= att.created_at %></td>
-    <%= end_table_row %>
+    <% end %>
   <% end %>
-<%= end_table %>
+<% end %>
