--- a/app/views/people/profile.html.erb
+++ b/app/views/people/profile.html.erb
@@ -4,18 +4,18 @@
 
 <% if ! @person.proposals.nil? %>
   <h3><%= _('Proposals submitted') %></h3>
-  <%= start_table %>
-    <%= table_head_row %>
+  <% table do %>
+    <% table_head_row do %>
       <th><%= _'Conference' %></th>
       <th><%= _'Title' %></th>
-    <%= end_table_row %>
+    <% end %>
     <% @person.proposals.each do |prop| %>
-      <%= table_row %>
+      <% table_row do %>
 	<td><%= link_to(prop.conference.name, :controller => 'conferences',
 	                :action => 'show', :id => prop.conference) %></td>
         <td><%= link_to(prop.title, :controller => 'proposals', 
 	                :action => 'show', :id => prop)%></td>
-      <%= end_table_row %>
+      <% end %>
     <% end %>
-  <%= end_table %>
+  <% end %>
 <% end %>
