--- a/app/views/people_adm/_people_for_task.html.erb
+++ b/app/views/people_adm/_people_for_task.html.erb
@@ -1,16 +1,16 @@
-<%= start_table %>
-  <%= table_head_row %>
+<% table do %>
+  <% table_head_row do %>
     <th><%= _'ID' %></th>
     <th><%= _'Login' %></th>
     <th><%= _'First name' %></th>
     <th><%= _'Family name' %></th>
-  <%= end_table_row %>
+  <% end %>
   <% task.people.sort_by {|p| p.id}.map do |person| %>
-    <%= table_row %>
+    <% table_row do %>
       <% %w(id login firstname famname).each do |col| %>
         <td><%= link_to(h(person.send(col)), 
                         :action => :show, :id => person) %></td>
       <% end %>
-    <%= end_table_row %>
+    <% end %>
   <% end %>
-<%= end_table %>
+<% end %>
