--- a/app/views/people_adm/list.html.erb
+++ b/app/views/people_adm/list.html.erb
@@ -11,14 +11,14 @@
                :xls_output => true) %></p>
 <%= pagination_header(@people) %>
 <%= will_paginate @people %>
-<%= start_table %>
-  <%= table_head_row %>
-  <%= people_list_head %>
-  <%= end_table_row %>
-  <% @people.each do |person| %>
-  <%= table_row %>
-  <%= list_row_for person %>
-  <%= end_table_row %>
+<% table do %>
+  <% table_head_row do %>
+    <%= people_list_head %>
   <% end %>
-<%= end_table %>
+  <% @people.each do |person| %>
+  <% table_row do %>
+    <%= list_row_for person %>
+  <% end %>
+  <% end %>
+<% end %>
 <p><%= link_to _('Register new'), :action => 'new' %></p>
