--- a/app/views/sys_conf_adm/list_table_fields.html.erb
+++ b/app/views/sys_conf_adm/list_table_fields.html.erb
@@ -21,18 +21,18 @@
 <h3><%= _'Add a new attribute' %></h3>
 <% form_tag url_for(:action => 'create_table_field') do %>
   <%= hidden_field_tag :table, @table %>
-  <%= start_table %>
-    <%= table_head_row %>
+  <% table do %>
+    <% table_head_row do %>
       <th><%= _'Field name' %></th>
       <th><%= _'Field type' %></th>
       <th><%= _'Default' %></th>
       <th></th>
-    <%= end_table_row %>
-    <%= table_row %>
+    <% end %>
+    <% table_row do %>
       <td><%= text_field_tag :fldname %></td>
       <td><%= select_tag :fldtype, options_for_select(@types.invert) %></td>
       <td><%= text_field_tag :flddefault %></td>
       <td><%= submit_tag _'Create' %></td>
-    <%= end_table_row %>
-  <%= end_table %>
+    <% end %>
+  <% end %>
 <% end %>
