Made explicit the ordering for the fields for user creation/account edition, allowing for explanatory notes

--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -1,10 +1,6 @@
 <h1><%= _'New account' %></h1>
 <p><%= _'Please fill in the following required details for your '+
         'account creation' %></p>
-<% comas_form_for :person, @person, :url => {:action => 'register'} do |f| %>
-  <%= %w(login passwd firstname famname email).map {|fld| f.auto_field(fld)} %>
-  <% @person.extra_listable_attributes.each do |attr| %>
-    <%= f.auto_field(attr.name) %>
-  <% end %>
-  <%= f.submit _('Create account') %>
-<% end %>
+<%= render :partial => 'pers_data', 
+           :locals => {:person => @person, :url => {:action => 'register'},
+                       :subm => _('Create account'), :include_passwd => true} %>
