--- a/app/views/notification/conference_invitation.text.plain.erb
+++ b/app/views/notification/conference_invitation.text.plain.erb
@@ -1,6 +1,7 @@
-<%= _('Hi, 
+<%= @invitation_text %>
 
-This is an auto-generated mail, sent by the conference administration
+---------------------------------------
+<%= _('This is an auto-generated mail, sent by the conference administration
 system for %s.') % @conference %>
 
 <%= _('The reason you are getting this mail is because %s
@@ -10,13 +11,6 @@ interesting for you.') % @sender_name %>
 <%= _'For further information on the conference, please enter:' %>
 
 <%= @conference_url %>
-
-<%= _'The person that invited you provided requested the following text to
-be sent to you:' %>
-
----------------------------------------
-<%= @invitation_text %>
----------------------------------------
 
 <%= _('In case you are interested, you can register for it by creating an
 account, by clicking on the "%s" link.') % _('New account') %>
