--- a/app/views/sys_conf_adm/list_catalogs.html.erb
+++ b/app/views/sys_conf_adm/list_catalogs.html.erb
@@ -8,7 +8,7 @@
     <th><%= _'Records' %></th>
   <% end %>
   <% @catalogs.each do |cat| %>
-    <% table do %>
+    <% table_row do %>
       <td><%= link_to(cat.table_name, :action => 'show_catalog',
                       :catalog => cat.table_name) %></td>
       <td><%= cat.count %></td>
