--- a/app/views/sys_conf_adm/list_table_fields.html.erb
+++ b/app/views/sys_conf_adm/list_table_fields.html.erb
@@ -1,4 +1,5 @@
-<h1><%= _('Manage fields for table <em>%s</em>') % @table %></h1>
+<h1><%= _('Manage fields for table <em>%s</em>') %
+  Translation.for(@table) %></h1>
 
 <p><%= _("This interface is provided as a general facility - " +
          "However, redefining your tables' configuration, handling " +
@@ -8,7 +9,8 @@
 
 <h3><%= _'Core attributes' %></h3>
 <p><%= _("The following fields are <em>core</em> - That means, they " +
-         "will always be part of a person's definition:") %></p>
+         "will always be part of a <em>%s</em>'s definition:") %
+           Translation.for(@table.to_s.singularize) %></p>
 <%= attributes_table(@core) %>
 
 <h3><%= _'Extra attributes' %></h3>
@@ -19,6 +21,15 @@
 <% end %>
 
 <h3><%= _'Add a new attribute' %></h3>
+<% if @table.to_s == 'people' %>
+  <p><%= _('If you want any added field to be publicly visible in the ' +
+           'public profile, remember to add it to the ' +
+           '<em>person_profile_fields</em> entry in the %s.<br/>' +
+           'As an example, you can check %s.') %
+         [ link_to(_('system configuration'), :action => 'list'),
+           link_to(_('your public profile'), :controller => 'people',
+	   :action => 'profile', :id => @user.id) ] %></p>
+<% end %>
 <% form_tag url_for(:action => 'create_table_field') do %>
   <%= hidden_field_tag :table, @table %>
   <% table do %>
