--- a/app/views/attendance_adm/_by_session.html.erb
+++ b/app/views/attendance_adm/_by_session.html.erb
@@ -8,7 +8,7 @@
     <th><%= _'Attendees' %></th>
     <th><%= _'Proposal' %></th>
   <% end %>
-  <% tslots.sort_by {|ts| ts.start_time}.each do |ts| %>
+  <% tslots.sort_by(&:start_time).each do |ts| %>
     <% att = ts.attendances.size
        tslot_link = url_for(:action => 'att_by_tslot', 
                             :conference_id => @conference, 
