--- a/app/views/people_adm/_form.html.erb
+++ b/app/views/people_adm/_form.html.erb
@@ -1,7 +1,7 @@
 <% # Ordered list of fields we will present to the user 
   fields = %w(login passwd firstname famname email admin_tasks
                conferences ok_conf_mails ok_general_mails).
-  concat(@person.extra_listable_attributes.map {|fld| fld.name}) %>
+  concat(@person.extra_listable_attributes.map(&:name)) %>
 <% comas_form_for(:person, @person, 
                   :url => {:action => action, :id => @person}) do |f| %>
   <% fields.each do |attr|%>
