Don't discard personal data if new account cannot be created; show in red fields in FieldWithErrors divs

--- a/public/stylesheets/comas.css
+++ b/public/stylesheets/comas.css
@@ -315,3 +315,9 @@ td, th {
     border: solid #face78 1px;
     padding-left: 1em;
 }
+
+.fieldWithErrors input {
+    border: solid red 2px;
+    color: red;
+    background: #fee;
+}
