--- a/app/views/notification/conference_invitation.text.plain.erb
+++ b/app/views/notification/conference_invitation.text.plain.erb
@@ -8,6 +8,11 @@ system for %s.') % @conference %>
 (a registered user for this conference) considered it could be
 interesting for you.') % @sender_name %> 
 
+<%= _('If you want to accept this invitation, please click on the 
+following link: ') %>
+
+<%= @invitation_url %>
+
 <%= _'For further information on the conference, please enter:' %>
 
 <%= @conference_url %>
