Fixed some interactions between conference invitation and duplicate account detection - It now works, and that is good!

--- a/app/views/people/_pers_data.html.erb
+++ b/app/views/people/_pers_data.html.erb
@@ -26,7 +26,7 @@
                    'in receiving mails from us relative to the ' +
                    'conferences you have signed up for?')) %>
   <% if @invite %>
-    <%= hidden_field_tag :link, @invite.link %>
+    <%= hidden_field_tag :invite, @invite.link %>
   <% end %>
   <%= f.submit subm %>
 <% end %>
